# Meta-Llama-on-AWS

./: .gitignore  Llama3-1-Long-Document-summarization-LangChain.ipynb  README.md
agents/langchain/fin-agent/: README.md  README_SAGEMAKER.md  cleanup_project.py  fin-agent-llama-api.py  fin-agent-sagemaker-v2.py  fin-agent-sagemaker-with-max-token.py  fin-agent-sagemaker.py  fin-agent.py  pyproject.toml  test_multi_step_detailed.py  test_multiple_parallel_tools.py
agents/langchain/fin-agent/deployment/: README.md  __init__.py  deploy_llama3_70b.py  deploy_llama3_lmi.py  download_model_to_s3.py
agents/langchain/fin-agent/src/: __init__.py  content_handler.py  content_handler_backup.py  content_handler_parallel.py  prompt_formatter.py  response_parser.py  sagemaker_with_tools.py  tool_schema_formatter.py
agents/langchain/fin-agent/tests/: README_TOKEN_TESTING.md  TEST_SUITE_GUIDE.md  __init__.py  test_all_tools.py  test_cleanup_endpoints.py  test_content_handler.py  test_deploy_endpoint.py  test_deploy_llama3_70b.py  test_download_model_to_s3.py  test_error_diagnostics_demo.py  test_mcp_coordination.py  test_prompt_formatter.py  test_response_parser.py  test_sagemaker_with_tools.py  test_tool_schema_formatter.py
agents/sre-multi-agent/fast_agentcore/: .clinerules  .dockerignore  .gitlab-ci.yml  .kics.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements-dev.txt  ruff.toml
agents/sre-multi-agent/fast_agentcore/.github/workflows/: repo-stats.yml
agents/sre-multi-agent/fast_agentcore/.mkdocs/: Makefile  README.md  mkdocs.yml  requirements.txt
agents/sre-multi-agent/fast_agentcore/docker/: docker-compose.yml
agents/sre-multi-agent/fast_agentcore/docs/: .nav.yml  AGENT_CONFIGURATION.md  DEPLOYMENT.md  GATEWAY.md  LOCAL_DEVELOPMENT.md  LOCAL_DOCKER_TESTING.md  MEMORY_INTEGRATION.md  STREAMING.md  TOOL_AC_CODE_INTERPRETER.md  VERSION_BUMP_PLAYBOOK.md  index.md
agents/sre-multi-agent/fast_agentcore/docs/architecture-diagram/: FAST-architecture.drawio
agents/sre-multi-agent/fast_agentcore/frontend/: .env.production  README.md  eslint.config.mjs  index.html  package.json  postcss.config.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
agents/sre-multi-agent/fast_agentcore/frontend/src/: App.tsx  main.tsx
agents/sre-multi-agent/fast_agentcore/gateway/: __init__.py
agents/sre-multi-agent/fast_agentcore/gateway/tools/: __init__.py
agents/sre-multi-agent/fast_agentcore/infra-cdk/: .prettierrc  README.md  config.yaml  minimal-deploy-policy.json  package.json
agents/sre-multi-agent/fast_agentcore/infra-cdk/lib/: backend-stack.ts  fast-main-stack.ts
agents/sre-multi-agent/fast_agentcore/infra-cdk/test/: fast-cdk.test.ts
agents/sre-multi-agent/fast_agentcore/patterns/langgraph-single-agent/: Dockerfile  langgraph_agent.py  requirements.txt  sre_langgraph_agent.py
agents/sre-multi-agent/fast_agentcore/patterns/sre-four-agent/: Dockerfile  requirements.txt  sre_agent.py
agents/sre-multi-agent/fast_agentcore/patterns/utils/: auth.py
agents/sre-multi-agent/fast_agentcore/scripts/: README.md  deploy-frontend.py
agents/sre-multi-agent/fast_agentcore/test-scripts/: README.md  test-agent-docker.py  test-agent.py  test-feedback-api.py  test-gateway.py  test-memory.py
agents/sre-multi-agent/fast_agentcore/tests/: __init__.py  conftest.py  pytest.ini
agents/sre-multi-agent/fast_agentcore/vibe-context/: AGENTS.md  coding-conventions.md  development-best-practices.md
(+530 files in other folders)
