[project]
name = "fin-agent"
version = "0.1.0"
description = "Financial Agent with Langchain"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.42.11",
    "edgartools[ai]>=4.35.0",
    "langchain-aws>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.4",
    "langgraph-supervisor>=0.0.31",
    "mcp>=1.12.3",
    "tavily-python>=0.7.13",
    "yfinance>=0.2.66",
    "numpy<2.0",
    "pyarrow<18.0",
    "sagemaker>=2.0,<3.0",
]
